# comp-maths

./: .gitignore  README.md
Bonus/1/: Exercise1.py  Exercise2.py  main.py  requirements.txt
Bonus/2/: README.md  main.py  requirements.txt
Labs/4-sem/finite_diff/: Cargo.toml  table.txt
Labs/4-sem/integration/: Cargo.toml  README.md
Labs/4-sem/lagrange/: README.md
Labs/4-sem/nonlinear_eqs/: Cargo.toml
Labs/5-sem/LU-decomposition/: Cargo.toml  README.md
Labs/5-sem/LU-separation/: Cargo.toml  README.md
Labs/5-sem/iteration-method/: Gemfile  README.md  iteration_method.rb
Labs/5-sem/jacobi-method/: Cargo.toml  README.md
Labs/5-sem/lu-decomposition/: README.md
Labs/5-sem/matrix-norm/: Cargo.toml  README.md
Labs/5-sem/qr-decomposition/: Cargo.toml  README.md
Labs/5-sem/richardson-method/: README.md  richardson-method.cabal
Labs/5-sem/rotation-method/: CHANGELOG.md  README.md  rotation-method.cabal
Labs/5-sem/sqrt-method/: Cargo.toml  README.md
Labs/5-sem/utils/: Cargo.toml
Labs/differentiation/: Cargo.toml  README.md
Labs/differentiation/src/: main.rs
Labs/finite_diff/: README.md
Labs/integration/: Cargo.toml
Labs/integration/src/: lib.rs  main.rs
Labs/lagrange/: .gitignore  README.md
Labs/lagrange/python/: main.py  requirements.txt
Labs/lagrange/rust/: Cargo.toml
Labs/nonlinear_eqs/src/: main.rs
Labs/splines/: Cargo.toml
Labs/splines/src/: lib.rs  main.rs
Labs/tridiagonal_matrix/: Cargo.toml
Tests/test3_integration/: main.tex
Tests/test4_sweep/: Cargo.toml
Tests/test6_eqs_n_systems_sols/: main.py  main.tex
(+47 files in other folders)
