[package]
name = "splines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tridiagonal_matrix = { git = "https://github.com/AJMC2002/comp-maths/" }
integration = { git = "https://github.com/AJMC2002/comp-maths/" }
ndarray = "0.15.6"

